changing card grid layout to flex, fixing wrap issues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -116,7 +116,7 @@ body {
   background-color: yellow;
   display: inline-block;
   padding: .50em .4em;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   line-height: 1;
   text-align: center;
